--- a/src/design/app.css
+++ b/src/design/app.css
@@ -1,60 +1,7 @@
-.side-nav li>a {
-  padding: 0 16px;
-}
-
-.side-nav .divider {
-  margin: 0;
-  height: 8px;
-  border-bottom: 1px solid #e0e0e0;
-  background-color: transparent;
-}
-
-.sidenav-header {
-  background: url("../img/undraw_hologram_fjwp.svg") no-repeat center center;
-  background-size: cover;
-  margin-bottom: 0px;
-  padding: 15px 0 0 15px;
-}
-
-.sidenav-header .row {
-  margin-bottom: 0;
-}
-
 .materialize-indigo {
   background-color: #3A53AF !important
 }
 
-.container {
-  position: relative;
-}
-
-.responsive-img {
-  width: 50%;
-  height: 100%;
-  position: absolute;
-  right: -20%;
-}
-
-.back {
-  background: linear-gradient(120grad, #643986, #98aed5);
-  position: absolute;
-  width: 100%;
-  height: 100%;
-}
-
-/* .btn,
-.btn-large,
-.btn-small,
-.btn-flat {
-  border-radius: 4px;
-  font-weight: 500;
-} */
-
-.card:hover {
-  box-shadow: 0px 10px 35px 0px rgba(0, 0, 0, 0.18);
-}
-
-.card {
-  border-radius: 15px;
-  box-shadow: 0px 5px 25px 0px rgba(0, 0, 0, 0.15);
+#logincard{
+  margin-top: 100px;
 }
