--- a/src/design/app.css
+++ b/src/design/app.css
@@ -5,3 +5,45 @@
 #logincard{
   margin-top: 100px;
 }
+
+#firstCard {
+  margin-top: 85px;
+}
+
+#cardImage {
+  width: 400%;
+ 
+}
+
+#teacher {
+  text-align: center;
+}
+#scard {
+  background-color: indigo;
+}
+
+
+#sname {
+  padding-bottom: 15px;
+  padding-left: 15px;
+  text-align: justify;
+  color: indigo;
+}
+#description {
+  color: aqua;
+}
+
+
+/*mobile*/
+@media only screen and (max-width: 600px) {
+  #cardImage{
+      display: none;
+  }
+
+  div.imageOfFame{
+      content:url(../lib/svg/undraw_science_fqhl.png);
+      /*Centering Image*/
+      display: block;
+      margin: 0 auto;
+  }
+}
